# wc2026-predictor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
archive/: README.md
archive/notebooks/: 01_exploration.ipynb
config/: config.yaml
data/manual/: team_name_mappings.csv  third_place_table_wikipedia.html  third_place_table_wikipedia.json  worldcup_2026_fixtures.csv  worldcup_2026_group_results.csv  worldcup_2026_knockout_results.csv  worldcup_2026_third_place_allocations.csv
data/predictions/: group_stage_prediction_evaluation_metrics.json  (+1 more)
reports/: benchmark_comparison.md  current_performance.md  evaluation.md  fixture_audit.json  github_method_comparison.md  indirect_model_report.md  methodology.md  model_card.md  training_strategy_report.md  worldcup_2026_group_stage_model_performance.md  worldcup_2026_knockout_model_performance.md  worldcup_2026_prediction_report.md  worldcup_2026_remaining_prediction_report.md
scripts/: __init__.py  build_features.py  evaluate_group_stage_predictions.py  evaluate_indirect_models.py  fetch_data.py  fetch_worldcup_2026_group_results.py  generate_paper_figures.py  populate_worldcup_2026_fixtures.py  predict_remaining_worldcup_2026.py  predict_worldcup_2026.py  run_backtest.py  simulate_indirect_comparison.py  train_indirect_models.py  train_models.py  update_results.py
src/: __init__.py
tests/: test_features.py  test_indirect_models.py  test_models.py  test_target_engineering.py  test_training_strategy.py  test_update_results.py  test_validation_and_simulation.py  test_weighting.py
(+47 files in other folders)
